--- a/source/companions.html
+++ b/source/companions.html
@@ -928,21 +928,21 @@
                         </svg>
                       </button>
                     </div>
-                    <div
+                    <ul
                       class="choose-companion__search-params choose-companion__search-params-1 choose-companion__visually-hidden">
-                      <div class="choose-companion__checkboxe">
+                      <li class="choose-companion__checkboxe">
                         <input id="gym" type="checkbox" class="checkbox" name="hobbypreference" value="Gym">
                         <label for="gym" class="choose-companion__checkboxe-text text">Спортзал</label>
-                      </div>
-                      <div class="choose-companion__checkboxe">
+                      </li>
+                      <li class="choose-companion__checkboxe">
                         <input id="hookah" type="checkbox" class="checkbox" name="hobbypreference" value="Hookah">
                         <label for="hookah" class="choose-companion__checkboxe-text text">Кальян</label>
-                      </div>
-                      <div class="choose-companion__checkboxe">
+                      </li>
+                      <li class="choose-companion__checkboxe">
                         <input id="sofa" type="checkbox" class="checkbox" name="hobbypreference" value="Sofa">
                         <label for="sofa" class="choose-companion__checkboxe-text text">Диван</label>
-                      </div>
-                    </div>
+                      </li>
+                    </ul>
                   </div>
                 </li>
                 <li class="choose-companion__item">
@@ -963,24 +963,24 @@
                         </svg>
                       </button>
                     </div>
-                    <div
+                    <ul
                       class="choose-companion__search-params choose-companion__search-params-2 choose-companion__visually-hidden">
-                      <div class="choose-companion__checkboxe">
+                      <li class="choose-companion__checkboxe">
                         <input id="hardrock" type="checkbox" class="checkbox" name="musicpreference" value="Hardrock">
                         <label for="hardrock" class="choose-companion__checkboxe-text text">Тяжелый
                           рок</label>
-                      </div>
-                      <div class="choose-companion__checkboxe">
+                      </li>
+                      <li class="choose-companion__checkboxe">
                         <input id="russianrap" type="checkbox" class="checkbox" name="musicpreference"
                           value="Russianrap">
                         <label for="russianrap" class="choose-companion__checkboxe-text text">Русский
                           рэп</label>
-                      </div>
-                      <div class="choose-companion__checkboxe">
+                      </li>
+                      <li class="choose-companion__checkboxe">
                         <input id="eurodance" type="checkbox" class="checkbox" name="musicpreference" value="Eurodance">
                         <label for="eurodance" class="choose-companion__checkboxe-text text">Евроденс</label>
-                      </div>
-                    </div>
+                      </li>
+                    </ul>
                   </div>
                 </li>
                 <li class="choose-companion__item">
@@ -1000,23 +1000,23 @@
                         </svg>
                       </button>
                     </div>
-                    <div
+                    <ul
                       class="choose-companion__search-params choose-companion__search-params-3 choose-companion__visually-hidden">
-                      <div class="choose-companion__checkboxe">
+                      <li class="choose-companion__checkboxe">
                         <input id="meateater" type="checkbox" class="checkbox" name="foodpreference" value="Meateater">
                         <label for="meateater" class="choose-companion__checkboxe-text text">Мясоед</label>
-                      </div>
-                      <div class="choose-companion__checkboxe">
+                      </li>
+                      <li class="choose-companion__checkboxe">
                         <input id="sitsonpropernutrition" type="checkbox" class="checkbox" name="foodpreference"
                           value="Sitsonpropernutrition">
                         <label for="sitsonpropernutrition" class="choose-companion__checkboxe-text text">Сидит на
                           ПП</label>
-                      </div>
-                      <div class="choose-companion__checkboxe">
+                      </li>
+                      <li class="choose-companion__checkboxe">
                         <input id="rawvegan" type="checkbox" class="checkbox" name="foodpreference" value="Rawvegan">
                         <label for="rawvegan" class="choose-companion__checkboxe-text text">Веган-сыроед</label>
-                      </div>
-                    </div>
+                      </li>
+                    </ul>
                   </div>
                 </li>
                 <li class="choose-companion__item">
@@ -1115,7 +1115,7 @@
                   </div>
                 </li>
               </ul>
-              <button type="submit" class="choose-companion__show button button--light-theme">
+              <button type="submit" class="choose-companion__show button button--light-theme text">
                 <span class="choose-companion__show-caption button__main-caption text">Показать</span>
               </button>
             </div>
@@ -1783,7 +1783,8 @@
                   </svg>
                 </a>
                 <div class="companions__vertical-line"></div>
-                <a href="nextpage.html" class="companions__button button link button--transparent-theme">
+                <a href="nextpage.html"
+                  class="companions__button companions__button--right-arrow button link button--transparent-theme">
                   <svg class="icon icon--active" width="10" height="18">
                     <use xlink:href="img/sprite.svg#arrow-right-thick"></use>
                   </svg>
