--- a/source/directions.html
+++ b/source/directions.html
@@ -1113,7 +1113,9 @@
                 </svg>
                 <div class="step-list__nav-buttons step-list__nav-buttons--1">
                   <a href="#step3" class="add-plans__button-step button button--middle-theme">
-                    <span class="add-plans__button-caption button__main-caption text">Следующий шаг</span>
+                    <span
+                      class="add-plans__button-caption add-plans__button-caption--step2 button__main-caption text">Следующий
+                      шаг</span>
                     <svg class="add-plans__arrow" width="10" height="18" viewBox="0 0 10 18"
                       xmlns="http://www.w3.org/2000/svg">
                       <use xlink:href="img/sprite.svg#arrow-right-thick"></use>
@@ -1124,7 +1126,7 @@
                     <svg class="add-plans__back icon icon--active" width="10" height="18">
                       <use xlink:href="img/sprite.svg#arrow-left-thick"></use>
                     </svg>
-                    <span class="step-list__step-back-caption button__main-caption text">На шаг назад</span>
+                    <span class="button__main-caption text">На шаг назад</span>
                   </a>
                 </div>
               </div>
@@ -1134,7 +1136,7 @@
                 <div class="step-list__header-text">
                   <h3 class="step-list__caption">Шаг 3.</h3>
                   <span class="step-list__caption step-list__name">Развлечения</span>
-                  <p class="step-list__description">
+                  <p class="add-plans__description--step3 step-list__description">
                     Наконец, расскажите о своих планах времяпровождения. Можно писать в свободной форме и ставить тэги.
                   </p>
                 </div>
@@ -1209,18 +1211,19 @@
               </div>
               <div class="step-list__nav-buttons">
                 <button type="submit" class="add-plans__button-step add-plans__send button button--middle-theme">
-                  <span class="add-plans__button-caption button__main-caption text">Отправить</span>
-                  <svg class="add-plans__arrow" width="10" height="18" viewBox="0 0 10 18"
+                  <span
+                    class="add-plans__button-caption add-plans__send-caption button__main-caption text">Отправить</span>
+                  <svg class="add-plans__send-icon add-plans__arrow" width="10" height="18" viewBox="0 0 10 18"
                     xmlns="http://www.w3.org/2000/svg">
                     <use xlink:href="img/sprite.svg#arrow-right-thick"></use>
                   </svg>
                 </button>
                 <a href="#step2"
                   class="add-plans__button-step step-list__previous button button--transparent-theme add-plans__button-step--previous">
-                  <svg class="add-plans__back icon icon--active" width="10" height="18">
+                  <svg class="add-plans__back add-plans__back--step3 icon icon--active" width="10" height="18">
                     <use xlink:href="img/sprite.svg#arrow-left-thick"></use>
                   </svg>
-                  <span class="button__main-caption text">На шаг назад</span>
+                  <span class="step-list__step-back-caption button__main-caption text">На шаг назад</span>
                 </a>
               </div>
             </li>
