--- a/source/companions.html
+++ b/source/companions.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="css/style.min.css" rel="stylesheet">
+  <link rel="preload" href="css/style.min.css" as="style" onload="this.rel='stylesheet'">
   <link rel="icon" href="favicon.png" sizes="16x16" type="image/png">
   <title>Попутчики</title>
 </head>
